--- a/Conexion.resx
+++ b/Conexion.resx
@@ -117,4 +117,105 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAYSSURBVGhD7ZpNaB1VGIZzY4Naf7qoihGpggFrCjHJzY8xIDeLdmERI5qFBa10YRcKdSGFKgS0
+        urClFLQWRXe2daGlICI026JQhS6KSG2J0nZhCxWJGtOfJPo+934TJpMzd37u3wz4wsucOXO+73u/mXNm
+        zpmZtgaifXh4+M6+vr7ugYGBJ/v7+18uFou7Vd4vfmzcTx3HaENbbLCtuMgoSqXSKomW9uJe8Wfxqvhv
+        jcQHvvbimxgWrjXgSuiqvClBl0xgM3jJYq4xGY2Hgm0WL5iAVhINm01W/aFu9YwCzPoCZoWzaDOZtaO7
+        u/t2OZ0OBMkip0dHR+8w2ekwODjYK0eLAcdZ5qLGeJ/JTwYeEQ6HuSDaLY3YaJfh9aCjHPEGOVRSiQHd
+        BN5zOMkVycHSiYYMZoIOcsgZSycaarwQMM4jFyydaKjxXwHjPPJvSycaanwwYJxHHrR0oqHGHWKeuzXa
+        OyydaIyMjNyqScfjASe5oSYfo+Rg6URDRlvZynBj0FkOuMmfQyyo8Zw2Bcq60vdq/3dzlmWisRPNQkFl
+        cogHNWYMHLfdMrS/Q5wXXcFaSTTtMJllaP+4mOix5N2wvrAqDwXNYF5RfRYmJjNoQVNFWgUahkfteKqE
+        4TRLRDu0BNWvEz8Vm7lGJhYx15mMJTiWsakThiwRJ3Vo2dn0YMHGdca/1PaKGLRPQ3xcsSs27jrpBsbr
+        pBhcxtaUsEfGy1ulUukWaxoKHgtapj3AnV58Vdwj2yPafqXtFLQydXuszUZs4jxS0CDbt8Ww+0qihG8E
+        jF38URwX4z/gawSxLCaxXZr8ZIkYD2p8LmAcRbrxJ7pCpZ6entvkwtn1E6KAL3zi22K4YofxnPmJhhqP
+        BYyTkvH0h3ha4/pzbSe1fUnbTUpgVOUipEydHaMNbU+L2Nb6amnM0omFdon5weEkF0Q7OVRSiQFuHNrw
+        mudi0FkOeBHtlkM8yOhrK3LLP+FzlnWeQDPCVfZyiIYaL/jf/Gl/i5jFaaVHtG0xucz/N2g/8XMYJ3dZ
+        VdvExMRNuqm8Y8dcQVvBBTShzWQyHO9WPdpTTTzm5bDHqj0UdFN4Tsda+X3pAhrQUpFUgZJ9VMe8nph+
+        piXnB1S94tnKbEfHnlebk2KcyUpa4vsksUJmedxgP/S1hzVPLa8p4HYdDp1UMFHQWX5Cbfnw/Z22l8Uk
+        L/Rpe9lsd+PLJjJhoLdtV9trZu9nzQl7pJt/NDQ0tNaaxwLjjKtjC401kDJ1/jEYB8RGA1pMk4uJEo67
+        5GNd/L64XmaN/E2BLrteV/OAxXRpCXLWbKMhx585HMQh891jdDMeayn+1/D/F0JXPWY+XbGqkhzMZzRs
+        6VXPz6QMEf7Z4OqQwG9GytRxrNowSsrFkJubG11dXTdrjDzlcJQLop0cLJ1oqDs8a9sXXA6zTDT7c4gF
+        Gf5pRT6dPqL9Ob/TjHIOrSZ7WQ6RUGPG02HbBSwi9on1HNf1Ipr2obEitaz/sJj8Oawz9oFVlaG6DnUV
+        3k1l4e+A66Zl2SsmNNvxdBMPOfhe2xXvrbQiGVQ9L+OqPfzrTWJNEdtkLEH1HabVa1vTTItAod9qdKxT
+        wV6zgPX47dDjVXziW2XvM8oK6NhWMXji6zK1/EfdaJuaRE0m2jUHvkdCHxP5cZQfSo+q/K18nBJ/Mp6i
+        jmO0oS022OKj4ioUvIbahibRpTVRwlHdlBvFlGZEA2oeuphoAArEJLZpcGnzOG820VDj8wHjaiTwWV2Z
+        N3TGH066EKgGfOET38SwWC4NLp43N9FQkKcdDpKQ5dovEvqNfL0rMoEZs1cvD2m+fD+kbHVjtKEtNtiK
+        riVfbJKDpRMPMuKMOp3lgGctjfiQEZ81eCHucphlojnd5x+tOFbJ+IzPWdZ5Bs0mPz00HnbKWZIbRrPJ
+        X7Q7TW59wCdMOT4UCJQFHkr0x05SKABj+3Wxlb89EBsNTftUWwYv0xR0l/ir2Mguj29i7Er68rCRYAnZ
+        qbH0orZHTCDTviQngrbYYMufAfhiDt3M2VzNKDBjkvDVXB1NDe/r7e19EFK2XrLaZmi5Sux/ZA9tbf8B
+        7UzWpf0v4MUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAABIZJREFUaEPt
+        mk/IVUUYh6+lWRmmKIWQbgpS2gj2T0zScNGqRYuCaKFBq8hFEKgLFVq0qshcuFCXpQZuRFBIcCWFuBCS
+        BEETtFwYoWkiZvl7Zu57eBnP991z7jkXz8R54OGbmcuc+86ZOfPnfHfQ09PT83/nYfmKfOMBSwzEMlE2
+        y/865iY5EV6S9iW75Xa5beiDSO+RFs+LsnWuSy7+fMh1g6WSmIitVXheuPDlkBsM3pfHJuxh+ZCEVfIH
+        6T8nBiAmYiPG1rDefTbkBoNbkvyktaF6TqafEQMQE/nWevlVyQUvhVyE2fHpCbtQGjNk+rmfoa2XibUx
+        ae92kdZ6uax3u0orvZxD7xqNezmn3jUa9XJOvWuM3cvzJRV/D7m8IGZipw2VeV1SaYdMl4OuS8zEThsq
+        w2mESjlLGypjDT4v/XYuB4l57AZzMskNYh67wRzDusYj8iO5XtrhwkPMrfXwMslLAM9G+XJMFuyUs2Iy
+        sFh+FpMFG+S6mKzMM5K4zH/lo9LTqIfTBtuUbxt3NvXkb4RcZK2kbGvIRX6WlD0echHyd2IycECWPZOU
+        G7ax4BxsMR6VnlaH9BVJedrgmyEXKat7RlKWNvifmCzW/am0NZUbZMdC4LN0J9jqkLbA/bND3m9QlkvK
+        Pgy5CD1FGc+fwXD8KyYDNKpsXfUbiIOS65yQZ4fpT6Wn1SEN/tmEsjeHjw3/enxjgZvGCKmL3XQ8QkHC
+        WA1eKam0K+S6x3Q3i5iJvdYBYqa0u8jMmAt+FqcNtbCHP0fTybYS+6RdgNk0By3e72QtWMytobMpyARi
+        tYanG5JpWS2p9EXIdY8n5RMxeR9fSmKnDZWxZSl9FliCFsVkAa9T06XqueFfgxmV7aVnnqzVC4LvvyaJ
+        DS/IlFY3Hr9Kyv3aS/7PmAzYkvZJyEVOSsp8A8nfjskA/7vie1MpN9hwUO9r+f0w/ZX0tLrxqLO19HVH
+        bS0XSPJTyefA1tJ/F7u132KyoFGD0yFtm/e0wX6LaK+HtoRc5LSkbLrDw8eSYPlOtDTlxi+Seu9KtpSk
+        v5WeVoc0kwWnIQ9D+KmYLHhH+p0QW803Y7KAPfeSmKzMHHlXEhvS2+mZeKweXiOp9HnIdY8V8oWYvA9i
+        JnbaUJm50u5gbvwtiZ021OInSUUmBiarHCRWYv5R1oaJgco5Suy1sNkXmaSYlXPQXi+hnzRHwqRApXTK
+        zwFiJnbaUJmplqUusF8SG89r2Soy1rJkDU43HsclX+SHC+siOymDfTR13w65CMc1yhh2BttKv0tiPU2H
+        KPp19hvJdS7Kq8P0e9LT6saDmdAHbs96060lJx/yU2knI26SfyXMzafxnkY93KTBfnSMajDX4Zc6fokx
+        KbcR9YekkbwQtP13ugS1OqTfkodisoDh+kFMBniXdEr616uvSV7VenjZlr5iHQU/YyIur/+1D7Q6pLsA
+        53Emrr2y7CXAWD3MYZ1KDKfcsB+xpS8cRsLkYI3mrjFU+NvltDXWT2yV4Uhnjc5JYi77z0dlGBo8DzlY
+        exj39PT0dJjB4B4gozNkppROygAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="PBMySQL.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAACNdJREFUaEPd
+        m3tsW1cdxx3HzsN2nEfXOHXSpmu2JsugdETdEC3QrbCt0vYHmjoek0b9TBwndZKmSVYy9YpB2dbE9r1+
+        JHZeTUlYCXRoK1QMgQqMoQEdAkY1xh9sMMVO2hW2Qgttaczvd/y7kV+p0tiJb/ORfrr3/M7J9fnec+/v
+        PO6J7GaIRCI5dLq6+eyzU8VKo/MD2d6+CFq+yXm+qi1gXrU3INfY/28m1Ow6n7O3b04UDjanc/gPUrHV
+        wW7hVD6Kq9jn6yKXbHPP2LY8kzMsCs819F9+8Mgrasq+tdkzNZWLokqbvRPkmqf+6aN3o1hReJ7F9fvS
+        Zs8PSu3ewdqnjm5nf3srAo/yuyioFVs7BRqr8CtRdKIpjP0Xq/YHn6CitwY7vjlZipVXmpwz5EpiJ3da
+        sZUbK3ng+eM1G/YHdpTaPZPwvl8XhUMcuLyl91u1VFz6VHYMPokVL7UJx8m1KO7sHv40tPK/ROHaJv7k
+        LRPdi5qEU1jpu7qGPkGuRbOhPfg4/C2L8HJD/9V7vj5ZTVnSBoLUf+BR/R8l41jXNvDE3T2jD1AyCY6L
+        yFVW9xtia+sdAy2UJV0anjlag5Vd3xawk2ueSsdAI+Zt7Bj8ArlSUtkWsIqii23CCXJLFwhAlzAIUTKO
+        Aqvrz2qz+7eUXBAWwEg0tPrr5JYmtzX7hrGie3xTGnLNcx83UbWld2RR0fgh51SZGMlB9G/ILT12HX5x
+        DVayYt/A0+RaMruFCa04XC1uFL5PbukBweu/CqPzIiXTYjv3gh4Fo61zDLSTW1qsa/X3YgVTPdZL4fau
+        oc+Joht6ITBKDe70aQVWrqTJ+11ypU2Z3TOK15Qb+q5JcnCibfL8ECuYyZmSOCrTNAk/Ipd0sAbOKLFy
+        MFUMkSttYt/nj3JjdeSWDrjygZVTWfg/kitttDbhJbwma20pUtzE/xgrmKn3TpyDo32899hd5JYOGGQW
+        GnktlRKb5wR7cqzuP5BLGojvsc7hf4ZcGWHXN76tE1uZ9QhSoaZn+GGs1EKrIemgNDr/idcub/X2kyv7
+        FDXyv8BRFyUzSl3P0E4UzIaeUgEX8TRW/gwlMw67mSC6qn3QRK7sgne/vNUXpGTGqe4Mfh4Fyw3918iV
+        ZaAyFS0ejlJx4AoHnaYFW2GB36lB8VkHKqJ3+J+l1DyaRv4V8B+gZFro9w10UStfJVf2wEcaAteLlGTU
+        7A/uxgri+he50oINaOB6aJsOBB8hd3bAoJVvdv2dkozYD2/3cBP15E6LMrt3hN1EY/8lcmUHaN1XY7sN
+        9t6SWLA5uBl/o6y0iL2ursV7OGvTxzu6gw9hJXAtC9OxI6TKjugq5jZuchMrnCbV7YEvi9dGK232jLOP
+        fSuJ+H5pmvjXMF17cOR+TCtN8FgD0PrX803Oc3ieCWoPjm9RWdx/ihWutvC/3jt2uoCKLD/wfgXwhxsO
+        jW+AiNqD50WN0aVaca16U9fwLlY4g9R0jdxfYHb+VRSubx9spqzlB7oMNiKC4xU8VsR0SVipHEPqrxWZ
+        4MEjx9QFJtc7+LuFFtfbmer/bwgu87AICj+KkTv2R/GxR1+Z3XOUXMuC+EUDb64YU5YdbupsHp3GgVM8
+        FJ2pALYQtB+FzbKqO4KPkTs7YKsXml3vrkSXwl4pfLVitmpkjer2wefpNKPgV4zbOwY/9pHe0Uf0ncEv
+        QjBlS0+4NYOKZI+67pEOOk2Luu7RTxZa3G+hsFSGcWVtq9dLxbNL10u/LKLTJVHlCLDHVjSF0fnhGrtX
+        qOfGtsKARJu10dhyQYMe9iFOaxNeJvfqZvOBoU+JLVxsk/DXx0zCtkWRaFwZqX1qeDtlrV7ug0kLm3+T
+        cLXUdxVkCpw6iqJxUxzHSWhNe7nAYKZ3+Ltxno5j/LgtkPkWlyDekTyze5TcSShM/T+ncnMwPbOQ+6YI
+        e/IOhdw5F0Mu2bVUFpnawyoWEgosIbd8BspeSbBLYV7x8tmpejZ8nXbnvo5/N+2WpdxTgsJLmr0TMNSc
+        JVd0vopC2GwGjrrOY0nfete0eOowT07biOXGvvcpa9GEBCUPlYuEeMXZsJDfEhaUtkSLRGQ5YU/B11g5
+        l+x6yFNweNZX1ClaiFdOUh6becFNOcPSHtkNP6tu/urwvYUm119YQhSssgo2PCpMrqR9UzBaYZtLb9vn
+        Y5N7EH4hmoMd+8KdO8dxcjQ8D/PKN7Fys6O6G04e4Ia8heWmhVwjueIAkWHMj8B1FysYeTRwUgXz9R3z
+        guES8yuD7JwoaxW06IMn4Go959PECTb0Hcd0cYsnafddAxdQsbKG/g8xHRIUb2DlZnyqR1mBBYBWZILD
+        btmT5IoDRIaWInieWMH5ZhdbuShs5FspW6Y0udgAXN3IG5IE7+17AdOLEfyPQGlxyJVzmVXQJZuLsesh
+        Xv7me8PaMiy3ooJ3chzbqJLzlb7oZw18HDEPDUgULDf0fQfTixEs8s7YxoL3x6sqLwxVVqHN+Aq/xCoN
+        hvkrKhjTMAB/jYmw8Q0QwZ/Dc2h5AfMSBStMzu+xsjchOBVQaWzplIJDfm1vyKs+HPZrPsPSSxA8O1Su
+        C/tUh2aO6dRJgivtXrbLDkRNwzH6Dx17ov1YouA8s2sc0yzgJbBYwR/4i0tZpecFK15laV7xM0xj5AZh
+        LFCFvAVWOGIXBj0ORHRBcQLPZzx5PZjG8qkIezWPn/OpHw57VFySYASi8vxKYJ7JeYrcSYLxkYeybPFs
+        IQPBbLk2xMveZpVewKA7MmC5c761GnjXr6QqIxp0a2wBITIly4WbcT5VGdHwRsz41D3h4JptYU+hR7a+
+        a0SPhheIRdsk3FvS7NtKyShwU7BsdVtgHXmigF/XeUSNfbhoGw+MVcQKxsfq/Mh6faK9N1zFglUiFybK
+        tOcGq+5Emw2U12BQm+YVJ1FE2K2I6zpReHi0Ym2q67N8Tiaf8WtvelN7EuWOIV2R3bs5lbFRGwiGmPA7
+        Kp4RcDACLfyT8EDRc+RaOVSN7mDs45tgcyD2p7GvSvaRyf4PQJyZDnTLoFcAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
